<resources>
    <string name="app_name">GeoDrink</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_friend">Add Friend</string>
    <!--<string name="title_activity_login">LoginActivity</string>-->
    <string name="login_act_name">Log In</string>
    <string name="login_login_text">Login</string>
    <string name="login_register_text">Register</string>
    <string name="register_act_name">Register</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <!--<string name="title_activity_register">RegisterActivity</string>-->
    <string name="cancel_text">Cancel</string>
    <string name="title_activity_details_page">Details Page</string>
    <string name="details_upload_photo">Upload photo</string>
    <string name="details_take_photo">Take photo</string>
    <string name="details_return">Return</string>
    <!--<string name="title_activity_check_in">CheckInActivity</string>-->
    <string name="checkin_act_name">Check In</string>
    <string name="checkin_btn_checkin">Check In</string>
    <string name="checkin_btn_addphoto">Add Photo</string>
    <string name="details_act_name">Details</string>
    <string name="profile_act_name">Profile Page</string>
    <string name="btn_upload_picture_txt">Upload picture</string>
    <string name="btn_profile_logout">Logout</string>
    <string name="add_friend_act_lbl">Add Friend</string>
    <string name="other_devices_lbl">Other available devices</string>
    <string name="paired_devices_lbl">Paired devices</string>
    <string name="btn_discoverability">Turn on discoverability</string>
    <string name="btn_scan">Scan</string>
    <string name="no_devices">No devices found</string>
    <string name="scanning">Scanning…</string>
    <string name="finish_scanning">Choose device</string>
    <string name="general_setting_title">General settings</string>
    <string name="service_pref_title">Service</string>
    <string name="service_pref_summary"><![CDATA[Tracking location & sending notifications]]></string>
    <string name="settings_act_lbl">Settings</string>
    <string name="profile_img_desc">Profile picture</string>
    <string name="rst_pass_act_lbl">Reset password</string>
    <string name="btn_send_rst_pass_text">Send</string>
    <string name="search_hint">Friend\'s Username</string>
    <string name="friend_profile_picture_desc">Friend profile picture</string>
    <string name="msg_auth_fail">Authentication failed. Check your email and password and try again</string>
    <string name="scoreboard_act_lbl">Scoreboard</string>
</resources>
