<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.njamb.geodrink.Activities.AddFriendActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_scan"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn_discover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_discoverability"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_paired_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paired_devices_lbl"
        android:visibility="invisible"/>
    <ListView
        android:id="@+id/paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_other_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_devices_lbl"
        android:visibility="invisible"/>
    <ListView
        android:id="@+id/other_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
